<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_all"
        android:icon="@drawable/ic_action_all"
        android:title="@string/action_all"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/action_cancel"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_select"
        android:icon="@drawable/ic_action_select"
        android:title="@string/action_select"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/action_new"
        app:showAsAction="ifRoom"
        android:visible="true"/>

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"
        app:showAsAction="never"
        android:visible="true"/>

</menu>